@@ -163,11 +163,14 @@ public:
 
       return SCIP_OKAY;
    }
-   
+
    /** execution method of presolver
     *
     *  The presolver should go through the variables and constraints and tighten the domains or
     *  constraints. Each tightening should increase the given total numbers of changes.
+    *
+    *  @note the counters state the changes since the last call including the changes of this presolver during its last
+    *        last call
     *
     *  possible return values for *result:
     *  - SCIP_UNBOUNDED  : at least one variable is not bounded by any constraint in obj. direction -> problem is unbounded
@@ -175,7 +178,7 @@ public:
     *  - SCIP_SUCCESS    : the presolver found a reduction
     *  - SCIP_DIDNOTFIND : the presolver searched, but did not find a presolving change
     *  - SCIP_DIDNOTRUN  : the presolver was skipped
-    *  - SCIP_DELAYED    : the presolver was skipped, but should be called again
+    *  - SCIP_DELAYED    : the presolver should be called again after all (none delayed) wants
     */
    virtual SCIP_RETCODE scip_exec(
       SCIP*              scip,               /**< SCIP data structure */
