@@ -71,6 +71,7 @@ fixed bugs:
 - fixed bug in cons_bounddisjunction with uninitialized return values
 - fixed bug when copying problem data in c++ case returned with the result SCIP_DIDNOTRUN
 - fixed bug with setting type of slack variables to be implicitly integral
+- fixed computation of counter which state the changes since the last call of a presolver
 
 parameters
 - changed parameter "propagating/pseudoobj/maxcands" to "propagating/pseudoobj/minuseless" (see prop_pseudoobj.h)
